[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://tscn/Map.tscn" type="PackedScene" id=2]
[ext_resource path="res://tscn/UI/Screens.tscn" type="PackedScene" id=3]
[ext_resource path="res://tscn/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/img/bg.png" type="Texture" id=5]
[ext_resource path="res://assets/audio/the_field_of_dreams.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/audio/well_done.wav" type="AudioStream" id=7]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -240.921, -40.1534 )
texture = ExtResource( 5 )
offset = Vector2( 850, 400 )

[node name="Map" parent="." instance=ExtResource( 2 )]

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Screens" parent="." instance=ExtResource( 3 )]

[node name="Timer" type="Timer" parent="."]

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="WellDone" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
[connection signal="match_success" from="Map" to="." method="_on_Map_match_success"]
[connection signal="start_game" from="Screens" to="." method="_on_Screens_start_game"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="finished" from="WellDone" to="." method="_on_WellDone_finished"]
